--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "base16-tomorrow-light-theme",
   "theme": "syntax",
   "version": "0.2.0",
-  "description": "Base16 theme for Atom",
+  "description": "Base16 light theme for Atom",
   "repository": "https://github.com/atom/base16-tomorrow-light-theme",
   "license": "MIT",
   "engines": {
