--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "theme": "syntax",
   "version": "1.0.0",
   "description": "Base16 light theme for Atom",
+  "keywords": [
+    "base16",
+    "light",
+    "syntax"
+  ],
   "repository": "https://github.com/atom/base16-tomorrow-light-theme",
   "license": "MIT",
   "engines": {
